--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,8 @@
     display: inline-block;
     padding: .5rem 1rem;
     cursor: pointer;
+    outline: none;
+    border: none;
 }
 
 /*  */
@@ -43,10 +45,47 @@
 .hero .img-wrapper {
     width: 100%;
     height: minmax(300px, 400px);
+    border-radius: 12px;
 }
 
 .hero .img-wrapper img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 12px;
+}
+
+/* Dishes */
+.dishes {
+    margin-top: 2rem;
+}
+
+.dishes h2 {
+    margin-bottom: 1rem;
+}
+
+.dishes-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(135px, 1fr));
+    grid-template-rows: repeat(2, minmax(135px, 1fr));
+    grid-gap: 25px;
+}
+
+.dish img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 12px;
+}
+
+.dish-1 {
+    grid-area: 1 / 1 / 3 / 3;
+}
+
+@media (min-width: 768px) {
+    .dishes-grid {
+        grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
+        grid-template-rows: repeat(2, minmax(150px, 1fr));
+        grid-gap: 50px;
+    }
 }
